@@ -24,6 +24,8 @@ $Source$
       writable permissions, refuse to work with existing config dir.
     * lang/*, libraries/auth/config.auth.lib.php: Suggest to run setup script
       if auth with default values fails.
+    * libraries/grab_globals.lib.php: Do not choke on arrays in $_SERVER 
+      array (bug #1370414).
 
 2005-12-08 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * libraries/tbl_move_copy.php: added PMA_table_rename()
